--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 depthai/*.so filter=lfs diff=lfs merge=lfs -text
 depthai/*.zip filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
